--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-SESSION_ID="PLEASE ADD YOUR SESSION HERE INCONNU~XD~"
-PREFIX=.
-OWNER_NUMBER=554488138425
-SUDO_NUMBER=554488138425
-OWNER_NAME=INCONNU BOY SENSEI
+SESSION_ID="INCONNU~XD~qUERkZqB#tp2ff4OuXA0mFdt41FnAPCx9Ax_QNINGgJAfEhrGQ10"
+PREFIX=L
+OWNER_NUMBER=237680622699
+SUDO_NUMBER=237680622699
+OWNER_NAME=༒𝐋𝐋𝐎𝐑𝐈𝐒༒
 AUTO_STATUS_SEEN=true
 AUTO_BIO=true
 AUTO_STATUS_REACT=true
@@ -16,5 +16,5 @@ ANTIBOT_WARNINGS=3
 REJECT_CALL=false
 NOT_ALLOW=true
 AUTO_STATUS_REACT=true
-MODE=public
+MODE=private
 WELCOME=false
